<resources>
    <string name="app_name">Notes</string>

    <string name="title">Title</string>
    <string name="text">Text</string>
    <string name="edit_activity_toolbar_text">Edit note</string>
    <string name="main_activity_toolbar_text">Your notes</string>
    <string name="about_activity_toolbar_text">About application</string>
    <string name="notes_pager_activity_toolbar_text">View pager</string>

    <string name="empty_text_massage">Enter the text</string>
    <string name="share">Share</string>
    <string name="save">Save</string>
    <string name="date_for_tools_text">28.07.1987</string>
    <string name="add_note">Add note</string>
    <string name="about">About</string>
    <string name="about_app">About application</string>
    <string name="app_notes_fot_internship">App \"Notes\" for internship</string>
    <string name="viewpager">viewPager</string>
    <string name="open_viewpager_activity">open viewPager activity</string>
    <string name="edit_dialog_massage">Do you want to save your changes?</string>
    <string name="positive_button_text">OK</string>
    <string name="negative_button_text">Cancel</string>
    <string name="note_unchanged">Note unchanged</string>
    <string name="empty_note_text">Note is empty</string>
    <string name="saving_successfully">Note saved</string>
    <string name="download">Download from firebase</string>
    <string name="search_hint">Text search</string>
    <string name="webView">WebView</string>
    <string name="current_location">Current location</string>
    <string name="customView">CustomView</string>
    <string name="get_current_coordinates">Get current coordinates</string>
    <string name="permission_required">Permission required</string>
    <string name="html_text_example"><![CDATA[<h2>Text to parse</h2><p>Some text from html</p>]]></string>
    <string name="animation">Animation</string>
    <string name="location_agree_dialog_title">Go to app settings?</string>
    <string name="location_agree_dialog_message">Location permission is required to find current coordinates</string>
    <string name="settings">Settings</string>
    <string name="permission_denied">Enable location permission in app settings</string>

</resources>