<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".edit.view.EditActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_edit_activity"
            android:layout_marginTop="@dimen/margin_edit_activity"
            android:layout_marginRight="@dimen/margin_edit_activity"
            android:background="@android:color/transparent"
            android:gravity="start|top"
            android:hint="@string/title"
            android:inputType="text"
            android:minHeight="@dimen/edit_height"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold"
            android:importantForAutofill="no"/>

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_edit_activity"
            android:layout_marginTop="@dimen/margin_edit_activity"
            android:layout_marginRight="@dimen/margin_edit_activity"
            android:background="@android:color/transparent"
            android:gravity="start|top"
            android:hint="@string/text"
            android:inputType="textMultiLine"
            android:minHeight="@dimen/edit_height"
            android:textSize="@dimen/text_size"
            android:importantForAutofill="no"/>

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MaterialAlertDialog.MaterialComponents.Title.Icon"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="@dimen/margin_edit_activity"
            android:layout_marginBottom="@dimen/margin_edit_activity"
            android:backgroundTint="@color/purple"
            android:text="@string/save"
            android:textStyle="bold"
            />

    </LinearLayout>
</ScrollView>