<?xml version="1.0" encoding="utf-8"?>

<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.MainActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/mainActivityToolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/purple"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                    app:layout_constraintTop_toTopOf="parent"
                    app:title="@string/main_activity_toolbar_text" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/buttonAbout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_end_last_button_in_toolbar"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/about_app"
                    android:minWidth="@dimen/min_size_of_button_in_toolbar"
                    android:minHeight="@dimen/min_size_of_button_in_toolbar"
                    android:padding="@dimen/toolbar_button_padding"
                    android:src="@drawable/ic_about"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/mainActivityToolbar" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/buttonDownload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_end_second_button_in_toolbar"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/download"
                    android:minWidth="@dimen/min_size_of_button_in_toolbar"
                    android:minHeight="@dimen/min_size_of_button_in_toolbar"
                    android:padding="@dimen/toolbar_button_padding"
                    android:src="@drawable/ic_download"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/mainActivityToolbar" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>